--- a/blog/templates/includes/navbar.html
+++ b/blog/templates/includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">BLOG</a>
+    <a class="navbar-brand" href="{{ url_for('index_app.index') }}">BLOG</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,6 +17,13 @@
         </li>
       </ul>
     </div>
+      <div>
+          {% if current_user.is_authenticated %}
+          <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+          {% else %}
+          <a href="{{ url_for('auth.login') }}">Login</a>
+          {% endif %}
+      </div>
   </div>
 </nav>
 
