--- a/blog/templates/users/list.html
+++ b/blog/templates/users/list.html
@@ -8,9 +8,12 @@
     <H2>Users</H2>
     <div>
         <ul>
-            {% for user_id in users %}
+            {% for user in users %}
                 <li>
-                    <p><a href="{{ url_for('users_app.details', user_id=user_id) }}">{{ users[user_id] }}</a></p>
+                    <p><a href="{{ url_for('users_app.details', pk=user.id) }}">{{ user.username }}</a>
+                    {% if user.is_staff %}
+                        <span class="badge bg-secondary">staff</span>
+                    {% endif %}</p>
                 </li>
             {% endfor %}
         </ul>
